static/css/style.css
/* Fonts */
@font-face {
  font-display: block;
  font-family: 'Alegreya Sans SC';
  font-style: normal;
  font-weight: 500;
  src: url('../fonts/alegreya-sans-sc-v23-latin-500.woff2') format('woff2');
}

@font-face {
  font-display: block;
  font-family: 'Alegreya Sans';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/alegreya-sans-v24-latin-regular.woff2') format('woff2');
}

/* Body */
body, html {
  height: 100%;
  margin: 0;
  padding: 0;
  color: white;
  background-color: black;
}

/* Image */
.bg-image {
  background: black center / cover no-repeat;
  position: relative;
  height: 100%;
  width: 100%;
  animation: kenburns 88s linear infinite;
}

/* Ken Burns effect - hit K for start/pause, and Q to quit */
@keyframes kenburns {
  0%, 100% {
    transform: scale(1) translate(0%, 0%);
  }
  7% {
    transform: scale(1.35) translate(5%, 5%);
  }
  15% {
    transform: scale(1.7) translate(20%, 10%);
  }
  30% {
    transform: scale(1.6) translate(20%, -7%);
  }
  40% {
    transform: scale(1.6) translate(15%, -15%);
  }
  47% {
    transform: scale(1.05) translate(5%, -2%);
  }
  52% {
    transform: scale(1.02) translate(0%, 0%);
  }
  60% {
    transform: scale(1.35) translate(-5%, 5%);
  }
  70% {
    transform: scale(1.7) translate(-20%, 10%);
  }
  77% {
    transform: scale(1.6) translate(-20%, -7%);
  }
  83% {
    transform: scale(1.6) translate(-15%, -15%);
  }
  90% {
    transform: scale(1.05) translate(-5%, -2%);
  }
  95% {
    transform: scale(1.02) translate(0%, 0%);
  }
}

/* Modal Styles */
.modal-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  left: 0; top: 0; right: 0; bottom: 0;
  z-index: 1000;
  overflow: auto;
}

.modal {
  display: none;
  opacity: 0;
  max-width: 600px;
  min-width: 300px;
  width: auto;
  height: auto;
  background-color: #ffffccdf;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  padding: 16px;
  overflow: auto;
  max-height: 80vh;
  position: relative;
  user-select: none;
  will-change: transform, opacity;
}

.modal-show {
  display: block;
  opacity: 1;
  animation: modalOpen 0.5s forwards ease-in-out;
}

.modal-hide {
  opacity: 0;
  animation: modalClose 0.5s forwards ease-in-out;
}

@keyframes modalOpen {
  from { opacity: 0; }
  to { opacity: 1; }
}

@keyframes modalClose {
  from { opacity: 1; }
  to { opacity: 0; }
}

.modal-visible {
  display: block;
}

.modal-content {
  font-size: 16px;
  line-height: 1.6;
  color: #424242;
}

.modal-text-common {
  text-align: center;
  font-weight: bold;
  line-height: 1.6;
  color: #424242;
}

.keyboard-shortcuts {
  font-family: 'Alegreya Sans SC';
  font-size: 18px;
}

.keyboard-shortcuts td {
  font-weight: 800;
}

#modalDate {font-size: 24px; font-family: 'Alegreya Sans SC', sans-serif;}
#modalHolidays {font-size: 20px; font-family: 'Alegreya Sans SC', sans-serif;}
#modalStyle {font-size: 14px; font-weight: normal; font-style: italic; font-family: 'Alegreya Sans SC', sans-serif;}
#modalText {font-size: 18px; font-family: 'Alegreya Sans', sans-serif;}
#modalAboutTitle {font-size: 24px; font-family: 'Alegreya Sans SC', sans-serif;}

.modal-content table {
  width: 100%;
  border-collapse: collapse;
  margin-top: 10px;
}

.modal-content table td {
  padding: 5px;
  border-bottom: 1px solid #999;
}

.modal-content table tr:last-child td {
  border-bottom: none;
}

.modal-display-flex {
  display: flex;
  justify-content: center;
  align-items: center;
}

.close {
  position: absolute;
  top: 10px;
  right: 15px;
  color: #524f2a;
  cursor: pointer;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
}

.date-input {
  padding: 8px 16px;
  font-size: 0.9rem;
  font-family: 'Alegreya Sans', sans-serif; /* Consistency in font usage */
  background-color: #f4f4c1; /* Matching the button color */
  border: 1px solid #b3a580; /* Matching the button's border */
  border-radius: 4px; /* Rounded corners like the button */
  color: #5c5346; /* Consistent text color */
  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2); /* Subtle inner shadow for depth */
  transition: all 0.3s ease; /* Smooth transition for focus styles */
  margin-right: 10px; /* Ensures some spacing between the input and button */
}

.date-input:focus {
  outline: none; /* Removes the default focus outline */
  box-shadow: 0 0 0 2px #a99676; /* A focus style that stands out yet fits the theme */
}

.modal-button {
  padding: 8px 16px;
  background-color: #f4f4c1; /* Mimics the color of an aged post-it */
  border: 1px solid #b3a580; /* Soft border color for a vintage look */
  border-radius: 4px; /* Less pronounced for a subtle feel */
  color: #5c5346; /* A deep, ink-like color for contrast and readability */
  font-size: 0.9rem;
  font-family: 'Alegreya Sans', sans-serif; /* Keeping in line with the literary theme */
  font-weight: 600;
  text-transform: none; /* Removing uppercase for a more traditional text appearance */
  cursor: pointer;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Softer shadow for a gentler depth */
  transition: all 0.3s ease;
}

.modal-button:hover {
  background-color: #e6e6b8; /* Slightly lighter on hover for a subtle interaction cue */
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25); /* Slightly deeper shadow on hover for depth */
}

.modal-button:active {
  background-color: #dcdca3; /* Even lighter, mimicking the pressing of actual paper */
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15); /* Less depth when 'pressed' */
  transform: translateY(2px); /* Mimics the action of pressing a physical button */
}

